--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,25 +1,23 @@
 ---
 driver:
-  name: vagrant
+  name: docker
+  use_sudo: false
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
-  always_update_cookbooks: true
+  always_update_cookbooks: false
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
   - name: centos-7.2
+  - name: ubuntu-14.04
 
 suites:
   - name: default
     run_list:
-      - recipe[vsearch-test::default]
+      - recipe[vsearch::default]
     verifier:
       inspec_tests:
         - test/smoke/default
