--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,8 @@ env:
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
+  - /opt/chefdk/bin/chef exec rake tests
   - chef gem install kitchen-docker
 
-script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
-
-matrix:
-  include:
-    - before_script:
-      - /opt/chefdk/bin/chef exec rake tests
-      env: CHEF_VERSION=12.17.44 UNIT_AND_LINT=1
-    - script:
-      - /opt/chefdk/bin/chef exec rake kitchen
-      env: CHEF_VERSION=12.17.44 UNIT_AND_LINT=1
+script:
+  - KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
