--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,9 @@ before_script:
 - "/opt/chefdk/bin/chef exec rake tests"
 script:
 - KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+after_script:
 - chmod +x trigger_dependent_build.sh
-- ./trigger_dependent_build.sh ${TRAVIS_ACCESS_TOKEN} EagleGenomics-cookbooks vsearch_runnable private
+- ./trigger_dependent_build.sh $TRAVIS_ACCESS_TOKEN EagleGenomics-cookbooks vsearch_runnable private
 
 notifications:
   slack:
