--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
 - chef gem install travis
 - "/opt/chefdk/bin/chef exec rake tests"
 script:
-- KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+# - KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
 after_script:
 - chmod +x trigger_dependent_build.sh
 - ./trigger_dependent_build.sh $TRAVIS_ACCESS_TOKEN EagleGenomics-cookbooks vsearch_runnable private
