change order of variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ script:
 - KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
 after_script:
 - chmod +x trigger_dependent_build.sh
-# - ./trigger_dependent_build.sh $TRAVIS_ACCESS_TOKEN EagleGenomics-cookbooks vsearch_runnable private
-- ./trigger_dependent_build.sh $TRAVIS_ACCESS_TOKEN
+- ./trigger_dependent_build.sh EagleGenomics-cookbooks vsearch_runnable private $TRAVIS_ACCESS_TOKEN
+# - ./trigger_dependent_build.sh $TRAVIS_ACCESS_TOKEN
 
 notifications:
   slack:
